--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -22,12 +22,12 @@
               } @else if (i === 2) {
                 🥈 
               }
-              {{ item.aplicacion.nombre }}
+              {{ item.nombre }}
             </h3>
-            <p class="app-description">{{ item.aplicacion.descripcion }}</p>
+            <p class="app-description">{{ item.descripcion }}</p>
             <div class="app-meta">
-              <small><strong>Equipo:</strong> {{ item.aplicacion.equipoResponsable }}</small> • 
-              <small><strong>Estado:</strong> {{ item.aplicacion.estado }}</small>
+              <small><strong>Equipo:</strong> {{ item.equipoResponsable }}</small> • 
+              <small><strong>Estado:</strong> {{ item.estado }}</small>
             </div>
           </div>
           <div class="cobertura-info">
